# chat-app

./: .dockerignore  .gitignore  LICENSE  SPEC.md
backend/chat_service/src/: ChatService.cpp  ChatService.h
backend/libs/logger/include/: Logger.h
backend/libs/logger/src/: Logger.cpp
backend/services/chat_service/: CMakeLists.txt  Dockerfile
backend/services/chat_service/src/: ChatMessage.h  ChatService.cpp  ChatService.h  InMemoryMessageStore.cpp  InMemoryMessageStore.h  Logger.cpp  Logger.h  MessagePublisher.h  MessageStore.h  RemoteMessageQueuePublisher.cpp  RemoteMessageQueuePublisher.h  RemoteMessageStore.cpp  RemoteMessageStore.h  WebSocketServer.cpp  WebSocketServer.h  main.cpp
backend/services/db_service/: .dockerignore  CMakeLists.txt  Dockerfile  README.md
backend/services/db_service/src/: ChatMessage.h  InMemoryMessageStore.cpp  InMemoryMessageStore.h  MessageStore.h  MongoMessageStore.cpp  MongoMessageStore.h  WorkerServer.cpp  WorkerServer.h  main.cpp
backend/services/message_queue/: CMakeLists.txt  Dockerfile  README.md
backend/services/message_queue/src/: ChatMessage.h  InMemoryMessageQueue.cpp  InMemoryMessageQueue.h  MessageEventSubscriber.cpp  MessageEventSubscriber.h  MessageQueue.h  MessageStore.h  RemoteDbMessageStore.cpp  RemoteDbMessageStore.h  WorkerServer.cpp  WorkerServer.h  main.cpp
clients/web_client/: Dockerfile  README.md  app.py  requirements.txt
clients/web_client/templates/: index.html
k8s/: README.md  chat-service.yaml  db-service.yaml  ingress.yaml  message-queue.yaml  mongodb.yaml  web-client.yaml
scripts/: animate_load_test.py  install_k8s_minikube.sh  plot_lb_strategy_comparison.py  plot_load_test.py  reset_chat_db.sh  reset_k8s_cluster.sh  run_lb_strategy_comparison.sh  run_load_test_with_charts.sh  start_k8s_services.sh  stop_k8s_services.sh  ws_load_generator.py
